deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name:  web-controller
  labels:
    name: web
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: web
    spec:
      containers:
      - image:  gcr.io/easypaking-82ce0/kkbox_game:v26
        name:  web
        command:
        - /bin/sh
        - -c
        - mongodb_url=mongodb://mongo:27017/ npm start
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        ports:
        - containerPort:  3000
          name:  web
