web-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    name: web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    name: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  rules:
  - host: xn--nwq409l.online
  tls:
  # - secretName: sslcerts
  - secretName: online-cert
  backend:
    serviceName: web
    servicePort: 80
